# docs/swagger.json
@@ -28,6 +28,18 @@
                 "responses": {}
             }
         },
+        "/auth/logout": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Logout handler",
+                "responses": {}
+            }
+        },
         "/auth/refresh": {
             "post": {
                 "consumes": [
